feat: Melhorias gerais